Fix spacing on title.

--- a/src/sgd/frontend/yeastgenome/static/scss/_legacy.scss
+++ b/src/sgd/frontend/yeastgenome/static/scss/_legacy.scss
@@ -4,6 +4,9 @@
 #center_title {
     //padding-bottom: 10px;
     text-align: center;
+    h1 {
+        margin-bottom: 0;
+    }
 }
 
 .gene_name {
